--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,21 @@
     <string name="input_password_str">Введите пароль</string>
     <string name="enter_str">Войти</string>
     <string name="registration_str">Зарегистрироваться</string>
+    <string name="registration_str_hi">Регистрация</string>
+    <string name="reg_login">Введите логин</string>
+    <string name="reg_pas">Введите пароль</string>
+    <string name="reg_email">Введите емаил</string>
+    <string name="reg_click_button">Зарегистрироваться</string>
+    <string name="reg_pas_again">Повторить пароль</string>
+    <string name="input_name_str">Введите название истории</string>
+    <string name="input_article_str">Расскажите свою историю</string>
+
+
+
+    <string name="header_temporary">Заголовок статьи</string>
+    <string name="article_teamp">Кузьменко Николай Егорович родился 19.12.1923г. Был призван Степновским РВК 12.03.1942 года. Демобилизован 17.03.1948г. Боевой путь солдата начался с учебы в г.Орджоникидзе, где готовили десантников. Так он попал в 10 Гвардейскую парашютную десантную бригаду. Участвовал в боях за г.Малгобек, г.Нальчик. Ранение получил под Черновцами в Западной Украине. В 1943 году был участником британо – советской операции «Согласие» в Иране по защите нефтяных месторождений Баку. Командовал операцией генерал-майор Федор Иванович Толбухин, командующий 3-м Украинским фронтом. Окончание войны Николай Егорович встретил в Австрии г.Вена. После демобилизации возвратился в родное село Варениковское Степновского района. Женился на Левашовой Федосии Яковлевне. Работали в колхозе. Растили 3 детей - Василия, Александра, Валентину. Награжден Орденом Отечественной войны II степени, Медалью «За доблесть и отвагу в Великой Отечественной войне», Юбилейными медалями «Двадцать лет Победы в Великой Отечественной войне 1941-1945 гг.», «Тридцать лет Победы в Великой Отечественной войне 1941-1945 гг.», «Сорок лет Победы в Великой Отечественной войне 1941-1945 гг.», «Пятьдесят лет Победы в Великой Отечественной войне 1941-1945 гг.», «Шестьдесят лет Победы в Великой Отечественной войне 1941-1945 гг.», Медалью «Ветеран Труда» Умер Кузьменко Николай Егорович 23.03.1986г.\n\n\n</string>
+
+    <string name="puslish_article_str">Рассказать историю</string>
+
 
 </resources>
