--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 
     <string name="header_temporary">Заголовок статьи</string>
     <string name="article_teamp">Кузьменко Николай Егорович родился 19.12.1923г. Был призван Степновским РВК 12.03.1942 года. Демобилизован 17.03.1948г. Боевой путь солдата начался с учебы в г.Орджоникидзе, где готовили десантников. Так он попал в 10 Гвардейскую парашютную десантную бригаду. Участвовал в боях за г.Малгобек, г.Нальчик. Ранение получил под Черновцами в Западной Украине. В 1943 году был участником британо – советской операции «Согласие» в Иране по защите нефтяных месторождений Баку. Командовал операцией генерал-майор Федор Иванович Толбухин, командующий 3-м Украинским фронтом. Окончание войны Николай Егорович встретил в Австрии г.Вена. После демобилизации возвратился в родное село Варениковское Степновского района. Женился на Левашовой Федосии Яковлевне. Работали в колхозе. Растили 3 детей - Василия, Александра, Валентину. Награжден Орденом Отечественной войны II степени, Медалью «За доблесть и отвагу в Великой Отечественной войне», Юбилейными медалями «Двадцать лет Победы в Великой Отечественной войне 1941-1945 гг.», «Тридцать лет Победы в Великой Отечественной войне 1941-1945 гг.», «Сорок лет Победы в Великой Отечественной войне 1941-1945 гг.», «Пятьдесят лет Победы в Великой Отечественной войне 1941-1945 гг.», «Шестьдесят лет Победы в Великой Отечественной войне 1941-1945 гг.», Медалью «Ветеран Труда» Умер Кузьменко Николай Егорович 23.03.1986г.\n\n\n</string>
+    <string name="name_article_str">Название статьи</string>
 
     <string name="puslish_article_str">Рассказать историю</string>
     <string name="title_auto">Авторизация</string>
@@ -36,5 +37,6 @@
     <string name="show_article_my_str">Посмотреть свои статьи</string>
     <string name="search_class_str">Искать статьи по классификации</string>
     <string name="exit_str">Выйти из аккаунта</string>
+    <string name="title_wall_str">Свежие публикации</string>
 
 </resources>
